fix overflow

--- a/src/styles/_interface.scss
+++ b/src/styles/_interface.scss
@@ -48,6 +48,7 @@
 
     &__content{
         padding: 15px;
+        overflow-y: auto;
         @media screen and (min-width: 800px){
             flex: 1;
             padding: 35px;
